force-app/main/default/objects/QuoteLineItem/fields/Counts__c.field-meta.xml
<CustomField>
    <fullName>Counts__c</fullName>
    <label>Counts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>