force-app/main/default/objects/QuoteLineItem/fields/Impression__c.field-meta.xml
<CustomField>
    <fullName>Impression__c</fullName>
    <formula>( UnitPrice  /   CPM__c  ) * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Impression</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>