force-app/main/default/objects/QuoteLineItem/fields/Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Budget__c</fullName>
    <formula>( Monthly_Impressions__c / 1000)* CPM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>