force-app/main/default/objects/QuoteLineItem/fields/Monthly_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Impressions__c</fullName>
    <formula>Quantity * Monthly_Frequency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Impressions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>