force-app/main/default/objects/QuoteLineItem/fields/Proposal_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal Invoice</label>
    <referenceTo>Proposal_Invoice__c</referenceTo>
    <relationshipLabel>Proposal Line Items</relationshipLabel>
    <relationshipName>Proposal_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>